# Croft

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  INCREMENTAL_STRATEGY.md  Makefile  README.md  REFERENCES.md
.github/: copilot-instructions.md
docs/: ARCHITECTURE_NOTES.md  BUILD_DEPENDENCY_MATRIX.md  EDITOR_FAMILY_ANALYSIS.md  EXAMPLE_MATRIX.md  LAMBKIN_ONBOARDING.md  LAMBKIN_XPI_JOURNAL.md  PACKAGE_DESIGN_MOCKUP.md  PRODUCT_FAMILY_PLAN.md  SPATIAL_WORKSPACE_QUESTIONS.md  TGFX_LOCAL_DIFF_SNAPSHOT.txt  TGFX_SIZE_ANALYSIS.md
examples/: editor_scene_shell.c  editor_scene_shell_wit.c  editor_text_appkit.mm  foundation_threads.c  fs_inspect.c  messaging_roundtrip.c  orchestration_bootstrap_runner.c  render_canvas_metal.c  render_canvas_metal_native.c  render_canvas_opengl.c  sapling_text.c  ui_window.c  wasm_guest.c  window_menu.c  wit_clock_now.c  wit_db_kv.c  wit_fs_read.c  wit_gpu_canvas.c  wit_json_viewer_wasm_host.c  wit_json_viewer_window.c  wit_mailbox_ping.c  wit_text_cli.c  wit_text_handles.c  wit_text_wasm_host.c  wit_text_window.c  wit_textpad_window.c  wit_window_events.c  wit_window_wasm_host.c  xpi_plan_runner.c
include/croft/: editor_brackets.h  editor_commands.h  editor_document.h  editor_document_fs.h  editor_folding.h  editor_line_cache.h  editor_menu_ids.h  editor_scene_runtime.h  editor_search.h  editor_status.h  editor_syntax.h  editor_text_model.h  editor_typography.h  editor_typography_macos.h  editor_whitespace.h  host_a11y.h  host_audio.h  host_editor_appkit.h  host_file_dialog.h  host_fs.h  host_gesture.h  host_log.h  host_menu.h  host_messaging.h  host_popup_menu.h  host_queue.h  host_render.h  host_thread.h  host_time.h  host_ui.h  host_wasm.h  json_viewer_core.h  json_viewer_state.h  json_viewer_window_app.h  orchestration_runtime.h  platform.h  scene.h  scene_a11y_bridge.h  wit_croft_wasm_guest.h  wit_guest_exports_runtime.h  (+20 more)
include/sapling/: arena.h  nomalloc.h  sapling.h
schemas/wit/: common-core.wit  host-a11y.wit  host-clipboard.wit  host-clock.wit  host-editor-input.wit  host-fs.wit  host-gpu2d.wit  host-menu.wit  host-popup-menu.wit  host-window.wit  menu-schema.wit  orchestration.wit
src/editor/: editor_brackets.c  editor_commands.c  editor_document.c  editor_document_aggregate.c  editor_document_fs.c  editor_folding.c  editor_line_cache.c  editor_scene_runtime.c  editor_search.c  editor_status.c  editor_syntax.c  editor_text_model.c  editor_whitespace.c
src/host/: host_a11y_stub.c  host_audio.c  host_file_dialog_stub.c  host_fs.c  host_log.c  host_messaging.c  host_popup_menu_stub.c  host_queue.c  host_render.cpp  host_render_metal.mm  host_render_native_metal.mm  host_render_tgfx_text_cache.h  host_thread.c  host_time.c  host_ui.c  host_wasm.c
src/runner/: dead_letter_v0.c  dedupe_v0.c  lease_v0.c  mailbox_v0.c  outbox_v0.c  runner_v0.c  timer_v0.c  txctx_v0.c  wit_wire_bridge_v0.c
src/runtime/: croft_aggregate.c  croft_foundation.c  croft_messaging.c  json_viewer_state.c  json_viewer_window_app.c  orchestration_runtime.c  sapling_aggregate.c  thatch_core.c  wit_guest_exports_runtime.c  wit_host_a11y_runtime.c  wit_host_clipboard_runtime.c  wit_host_clock_runtime.c  wit_host_editor_input_runtime.c  wit_host_fs_runtime.c  wit_host_gpu2d_runtime.c  wit_host_menu_runtime.c  wit_host_popup_menu_runtime.c  wit_host_window_runtime.c  wit_mailbox_runtime.c  wit_runtime_support_freestanding.c  wit_skip.c  wit_store_runtime.c  wit_text_program.c  wit_text_runtime.c  wit_wasi_machine_runtime.c  wit_wasi_machine_runtime_cli_random.inc  wit_wasi_machine_runtime_clocks_io.inc  wit_wasi_machine_runtime_common.inc  wit_wasi_machine_runtime_filesystem.inc  wit_wasi_machine_runtime_runtime.inc  wit_world_runtime.c  xpi_demo_runtime.c  xpi_registry.c
src/sapling/: arena.c  bept.c  fault_inject.c  hamt.c  sapling.c  seq.c  text_literal.c  text_tree_registry.c  thatch.c  thatch_json.c  txn.c  txn_vec.c
src/scene/: node_code_block.c  node_text_editor.c  node_viewport.c  scene_a11y_bridge.c  scene_node.c
tests/: test_editor_brackets.c  test_editor_commands.c  test_editor_decorations.c  test_editor_document.c  test_editor_find_replace.c  test_editor_folding.c  test_editor_line_cache.c  test_editor_metrics_and_composition.c  test_editor_scene_runtime.c  test_editor_search.c  test_editor_status.c  test_editor_syntax.c  test_editor_text_model.c  test_editor_whitespace.c  test_editor_wrap_layout.c  test_json_viewer_state.c  test_json_viewer_window_app.c  test_main.c  test_queue.c  test_scene_accessibility.c  test_wit_host_clock_runtime.c  test_wit_host_editor_input_runtime.c  test_wit_host_fs_runtime.c  test_wit_host_popup_menu_runtime.c  test_wit_mailbox_runtime.c  test_wit_resource_codegen.c  test_wit_store_runtime.c  test_wit_text_program.c  test_wit_text_runtime.c
tests/fixtures/: wit_host_fs_sample.txt
tests/host_tests/: test_a11y_standalone.c  test_audio_standalone.c  test_editor_standalone.c  test_fs.c  test_fuzz_messaging.c  test_menu_standalone.c  test_render_standalone.c  test_scene_standalone.c  test_ui_window_standalone.c  test_wasm_guest.c  test_wasm_wit_export_guest.c  test_wasm_wit_guest.c  test_zoom_standalone.c
tests/wasm_guests/: dummy_guest.wat  json_source_guest.wat  orchestration_bootstrap_fail.c  orchestration_bootstrap_json.c  orchestration_bootstrap_toy.c  orchestration_guest_runtime.c  orchestration_guest_runtime.h  orchestration_worker_fail.c  orchestration_worker_json.c  orchestration_worker_toy.c  text_bridge_guest.wat  thatch_json_guest.c  thatch_json_guest.h  wit_json_viewer_guest.c  wit_window_guest.c  wit_world_bridge_guest.c  wit_world_bridge_guest.wat  (+1 more)
tools/: benchmark_binary_size.sh  benchmark_editor_families.sh  benchmark_editor_runtime.sh  benchmark_editor_runtime_matrix.sh  benchmark_runtime_perf.sh  benchmark_tgfx_backends.sh  bootstrap_deps.sh  deps.lock.sh  generate_dependency_report.sh  generate_wasi_vendor_report.sh  run_logged.sh  runtime_bench_runner.c  solve_xpi_requirements.py  summarize_logs.sh  summarize_size_bench.sh  validate_examples.sh  wit_codegen  wit_codegen.c
(+74 files in other folders)
